--- a/.env
+++ b/.env
@@ -1,4 +1,6 @@
 NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY=pk_test_bGlrZWQtY2hvdy05OC5jbGVyay5hY2NvdW50cy5kZXYk
 CLERK_SECRET_KEY=sk_test_o0MEC6eDOWmRXT2h45rP0NcIGrw7HtHtJJe1GneJuU
-
- 
+NEXT_PUBLIC_CLERK_SIGN_IN_URL=/sign-in
+NEXT_PUBLIC_CLERK_SIGN_UP_URL=/sign-up
+NEXT_PUBLIC_CLERK_AFTER_SIGN_IN_URL=/
+NEXT_PUBLIC_CLERK_AFTER_SIGN_UP_URL=/
