--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
     "@clerk/nextjs": "^4.29.9",
     "@prisma/client": "^5.10.2",
     "@radix-ui/react-dialog": "^1.0.5",
+    "@radix-ui/react-separator": "^1.0.3",
     "@radix-ui/react-slot": "^1.0.2",
     "@uploadthing/react": "^6.3.4",
     "axios": "^1.6.7",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
+    "date-fns": "^3.4.0",
     "lucide-react": "^0.356.0",
     "next": "14.1.2",
     "react": "^18",
@@ -24,7 +26,8 @@
     "sonner": "^1.4.3",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7",
-    "uploadthing": "^6.5.2"
+    "uploadthing": "^6.5.2",
+    "zustand": "^4.5.2"
   },
   "devDependencies": {
     "@types/node": "^20.11.26",
