--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "sonner": "^1.4.3",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7",
+    "tesseract.js": "^4.1.1",
     "uploadthing": "^6.5.2",
     "zustand": "^4.5.2"
   },
