now it can scan pdf+images ,we added a microservice using flask for the pdf conversion problem

--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
   "dependencies": {
     "@clerk/nextjs": "^4.29.9",
     "@prisma/client": "^5.10.2",
+    "@radix-ui/react-accordion": "^1.1.2",
     "@radix-ui/react-dialog": "^1.0.5",
+    "@radix-ui/react-progress": "^1.0.3",
     "@radix-ui/react-separator": "^1.0.3",
     "@radix-ui/react-slot": "^1.0.2",
     "@uploadthing/react": "^6.3.4",
@@ -20,24 +22,29 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "date-fns": "^3.4.0",
+    "embla-carousel-react": "^8.0.2",
     "lucide-react": "^0.356.0",
     "next": "14.1.2",
+    "pdfjs-dist": "^4.0.379",
     "react": "^18",
     "react-dom": "^18",
     "sonner": "^1.4.3",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7",
-    "tesseract.js": "^4.1.1",
+    "tesseract.js": "^5.0.4",
     "uploadthing": "^6.5.2",
     "zustand": "^4.5.2"
   },
   "devDependencies": {
     "@types/node": "^20.11.26",
+    "@types/pdfjs-dist": "^2.10.378",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/tesseract.js": "^2.0.0",
     "autoprefixer": "^10.0.1",
     "eslint": "^8",
     "eslint-config-next": "14.1.2",
+    "node-addon-loader": "^0.0.6",
     "postcss": "^8",
     "prisma": "^5.10.2",
     "tailwindcss": "^3.3.0",
