--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "date-fns": "^3.4.0",
     "embla-carousel-react": "^8.0.2",
     "lucide-react": "^0.356.0",
+    "mammoth": "^1.7.2",
     "next": "14.1.2",
     "pdfjs-dist": "^4.0.379",
     "react": "^18",
@@ -33,7 +34,7 @@
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7",
     "tesseract.js": "^5.0.4",
-    "uploadthing": "^6.5.2",
+    "uploadthing": "^6.10.3",
     "zustand": "^4.5.2"
   },
   "devDependencies": {
